2002-02-10  Gediminas Paulauskas <menesis@delfi.lt>

	* Makefile.am: use intltool for .desktop files.
	* *.desktop.in: add files without translations.
	* *.desktop: removed, they are generated.

2002-02-10  Gediminas Paulauskas <menesis@delfi.lt>

	* logout.c: put dialog buttons in "right" order ;)

2002-02-04  jacob berkman  <jacob@ximian.com>

	* Makefile.am (gsm-protocol.c): this file really does depend on
	gsm-marshal.[ch]

2002-01-31  Kjartan Maraas  <kmaraas@gnome.org>

	* gsm-client-list.c: Merge fix for crash on double delete
	from Glynn from stable.
	
2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* default.in: Added gnome-panel-2 because it doesn't crash
	all that often now.

2001-12-24  Seth Nickell  <snickell@stanford.edu>

	* save-session.desktop:

	Tweak icon filename to make it work, move into
	Utilities (not really a setting, neh?)

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Er, and get the third .desktop file :-)

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install .desktop settings files into 
	$datadir/control-center/capplets

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* gnome-wm: Communicate current wm to wm-properties capplet
	via gconf, not gnome_config.

	* gnome-wm.1: Note move away from GConf.

2001-12-06  Glynn Foster  <glynn.foster@sun.com>

	* splash.c: Fix up the arguments to the canvas-text-item to use
	a PangoFontDesc instead. Dunno if this actually works, I'm too
	afraid to run gnome-session-2 on my machine. Thanks to Miles for
	spotting this out.

2001-12-06  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* main.c: call gnome_program_init() before the ICE stuff so that
	  things get initialized in the right order. This kills a few
	  warnings.

2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* gnome-wm: config stuff (default.wm) goes in $HOME/.gnome2 now
	  (but it's a variable at the top, so it is easy to change back
	  later).
